2003-01-15  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/Makefile (tests): Add bug14.
	* stdio-common/bug14.c: New file.

	* stdio-common/vfscanf.c: When recognizing multibyte characters in
	string reset the byte counter after mbrtowc reported it is not a
	partial character.  Reported by Al Viro <aviro@redhat.com>.

2003-01-15  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/socket.S: Include
	sysdep-cancel.h, not sysdep.h.

2003-01-15  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (nscd_run): Protect accept call with
	TEMP_FAILURE_RETRY.

2003-01-15  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/Makefile: Include $(common-objpfx)s-proto-bp.d.
	(common-generated): Add s-proto-bp.d.
	* sysdeps/unix/make-syscalls.sh: Use s-proto-bp.d for dependencies
	of bp thunks.
	* sysdeps/unix/s-proto-bp.S: New file.
	* sysdeps/generic/bp-thunks.h: Don't include <sys/vm86.h> here.
	Use <io/sys/sendfile.h> instead of <sys/sendfile.h>.
	* sysdeps/unix/sysv/linux/i386/bp-thunks.h: New file.

2003-01-15  Roland McGrath  <roland@redhat.com>

	* Makerules: Use -include for tls.make, suppresses warning.
	Move gen-as-const-headers rules up so before-compile is set in time.
	(sed-remove-dotdot): Fix to work right for subdirs or top dir.

2003-01-15  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd.c (main): Make code to close all file descriptors
	faster and more robust.

	* nscd/nscd_getpw_r.c (nscd_getpw_r): Consolidate writing of the
	request with one writev call.  Protect all read calls with
	TEMP_FAILURE_RETRY.
	* nscd/nscd_getgr_r.c (nscd_getgr_r): Likewise.
	* nscd/nscd_gethst_r.c (nscd_gethst_r): Likewise.

	* nscd/hstcache.c: Use extend_alloca to reallocate alloca'd buffer.
	Protect writev calls with TEMP_FAILURE_RETRY.
	* nscd/grpcache.c: Likewise.
	* nscd/pwdcache.c: Likewise.

	* nscd/hstcache.c (addhstbynamev6): Don't interpret hostname as
	IPv6 address in debug output.
